2006-08-26  Viktor Griph  <griph@dd.chalmers.se>

	* NEWS:
	* fvwm/expand.c (expand_vars_extended):
	correctly expand break.
	* fvwm/conditional.c (__rc_matches_rcstring_consume):
	fix matching break.

2006-08-26  Viktor Griph  <griph@dd.chalmers.se>

	* fvwm/decorations.h (is_function_allowed):
	* fvwm/decorations.c (__is_resize_allowed, is_function_allowed):
	work on 'const FvwmWindow *'

	* fvwm/fvwm.h (action_flags):
	* fvwm/style.c (check_window_style_change):
	* fvwm/module_interface.c (__get_allowed_actions)
	(CONFIGARGS):
	* libs/vpacket.h (ConfigWinPacket):
	expose fvwm allowed actions to modules

2006-08-09  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/move_resize.c (__move_icon):
	*do* map icon windows for pictured icons on move, but only if they end
	up on the current desk

2006-08-09  Viktor Griph  <griph@dd.chalmers.se>

	* fvwm/move_resize.c (__move_icon):
	don't map icon windows for pictured icons on move

2006-08-09  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/style.c (remove_all_of_style_from_list):
	(__simplify_style_list, blockor, blockand, blockunmask)
	(blockissubset, style_ids_are_equal, style_id_equals_id)
	(styles_have_same_id, fw_match_style_id)
	(one_fw_can_match_both_ids):
	(check_window_style_change):
	use int/0/1 instead of Bool/False/True

	* fvwm/move_resize.c (stick_across_pages):
	use False instead of FALSE

	* fvwm/style.c (fw_match_style_id):
	* fvwm/read.c (run_command_file, push_read_file):
	* fvwm/add_window.c (MappedNotOverride):
	* libs/wild.c (matchWildcards):
	use 0 and 1 instead of FALSE and TRUE

	* fvwm/fvwm.h:
	removed TRUE and FALSE

2006-08-07  Viktor Griph  <griph@dd.chalmers.se>

	* NEWS:
	FvwmPager !IconTitle style bugfix.

2006-07-31  Scott Smedley  <ss@aao.gov.au>

	* fvwm/fvwm.1.in:
	Updated description of Wait command in man page.

2006-07-29  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* libs/Flocale.c (FlocaleFontStructDrawString)
	(FlocaleRotateDrawString):
	(FlocaleDrawString):