@@ -19,26 +19,26 @@
 
 2006-08-09  Viktor Griph  <griph@dd.chalmers.se>
 
-	* FvwmPager/x_pager.c (MoveWindow): 
+	* FvwmPager/x_pager.c (MoveWindow):
 	remove non-working icon-bug workaround
 
 2006-08-09  Viktor Griph  <griph@dd.chalmers.se>
 
 	* FvwmPager/x_pager.c (Scroll):
 	spacing
-	
+
 	(MoveWindow, IconMoveWindow):
 	reindented and respaced
-	
-	(MoveWindow): 
+
+	(MoveWindow):
 	make icon move use fvwm function
 	don't add border width and title height to coordinates.
 	workaround erratic icon behaviour when not on current desk
-	
-	(IconMoveWindow): 
+
+	(IconMoveWindow):
 	make moves use fvwm function
-	
-	(MoveWindow, IconMoveWindow):	
+
+	(MoveWindow, IconMoveWindow):
 	#if 0 (with comments) questionable code doing double work
 
 2006-08-09  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>
